src/components/tabs/tab-group.scss
@import 'mixins';

:host {
  display: block;
  width: 100%;
}

.tab_group {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  position: relative;

  &__header {
    padding: 4px 16px;
    overflow: hidden;

    &__itens {
      display: flex;
      flex-direction: row;
      width: max-content;
      gap: 32px;
      margin: auto;

      &__center {
        justify-content: center;
        margin: auto;
      }

      &__right {
        justify-content: right;
        margin: 0 0 0 auto;
      }

      &__left {
        justify-content: left;
        margin: 0 auto 0 0;
      }

      &__item {
        cursor: pointer;
        height: 46px;
        gap: 4px;
        width: auto;
        display: flex;
        align-items: center;
        border-bottom: 2px solid transparent;
        position: relative;

        &__typo{
          color: $color-content-disable;
          &__disable {
            color: $color-content-ghost;
          }
          &__error {
            color: $color-surface-negative;
          }
        }

        &::before {
          content: '';
          position: absolute;
          inset: -4px;
          border: 2px solid transparent;
          border-radius: 4px;
        }

        &:focus-visible {
          outline: none;

          &::before {
            border-color: $color-focus;
          }
        }

        &__open {
          color: $color-content-default;
          border-color: $color-primary;
        }
        &__disable {
          cursor: no-drop;
        }
      }
    }
  }

  &__slide {
    position: relative;
    overflow: hidden;
    padding: 0 16px;
    height: 54px;
    margin-left: 56px;
    margin-right: 56px;

    &-button {
      position: absolute;
      z-index: 1;
      background-color: $color-surface-1;

      &[icon='arrow-left'] {
        left: 0;
      }
      &[icon='arrow-right'] {
        right: 0;
      }
    }

    &__itens {
      position: absolute;
      left: 56px;
      width: max-content;
      height: 48px;
      display: flex;
      flex-direction: row;
      justify-content: center;
      padding: 4px;
      gap: 32px;
      -webkit-transition: left 0.5s;
      -moz-transition: left 0.5s;
      transition: left 0.5s;
    }
  }
  &__content {
    height: 100%;
  }

  &__scrolled {
    flex-shrink: 999;
    overflow: none;

    @include custom-scroll;
  }
}

